Add some content to the Overview page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
                 <li>History</li>
                 <li>Trends</li>
             </ul>
+            <p>
+                This site contains information about Version Control Systems.<br>
+                Use the navigation section above to browse pages.
+            </p>
         </section>
     </body>
 </html>
