--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
         <section>
             <h5>Navigation</h5>
             <ul>
-                <li>Overview</li>
-                <li>History</li>
-                <li>Trends</li>
+                <li><a>Overview</a></li>
+                <li><a href="/history.html">History</a></li>
+                <li><a href="/distributed.html">Distributed VCS breakthrough</a></li>
+                <li><a href="/trends.html">Trends</a></li>
             </ul>
             <p>
                 This site contains information about Version Control Systems.<br>
