--- a/history.html
+++ b/history.html
@@ -8,9 +8,10 @@
         <section>
             <h5>Navigation</h5>
             <ul>
-                <li>Overview</li>
-                <li>History</li>
-                <li>Trends</li>
+                <li><a href="/index.html">Overview</a></li>
+                <li><a>History</a></li>
+                <li><a href="/distributed.html">Distributed VCS breakthrough</a></li>
+                <li><a href="/trends.html">Trends</a></li>
             </ul>
             <h5>Here's a small timeline of major VCSs:</h5>
             <p>
