Made page links not use the root path
Yes, I have no idea how to fix this...

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             <h5>Navigation</h5>
             <ul>
                 <li><a>Overview</a></li>
-                <li><a href="/history.html">History</a></li>
-                <li><a href="/distributed.html">Distributed VCS breakthrough</a></li>
-                <li><a href="/trends.html">Trends</a></li>
+                <li><a href="history.html">History</a></li>
+                <li><a href="distributed.html">Distributed VCS breakthrough</a></li>
+                <li><a href="trends.html">Trends</a></li>
             </ul>
             <p>
                 This site contains information about Version Control Systems.<br>
