--- a/distributed.html
+++ b/distributed.html
@@ -8,10 +8,10 @@
         <section>
             <h5>Navigation</h5>
             <ul>
-                <li><a href="/index.html">Overview</a></li>
-                <li><a href="/history.html">History</a></li>
+                <li><a href="index.html">Overview</a></li>
+                <li><a href="history.html">History</a></li>
                 <li><a>Distributed VCS breakthrough</a></li>
-                <li><a href="/trends.html">Trends</a></li>
+                <li><a href="trends.html">Trends</a></li>
             </ul>
         </section>
         <p>
