--- a/trends.html
+++ b/trends.html
@@ -8,9 +8,9 @@
         <section>
             <h5>Navigation</h5>
             <ul>
-                <li><a href="/index.html">Overview</a></li>
-                <li><a href="/history.html">History</a></li>
-                <li><a href="/distributed.html">Distributed VCS breakthrough</a></li>
+                <li><a href="index.html">Overview</a></li>
+                <li><a href="history.html">History</a></li>
+                <li><a href="distributed.html">Distributed VCS breakthrough</a></li>
                 <li><a>Trends</a></li>
             </ul>
         </section>
