Added grouping block tags for structure

--- a/distributed.html
+++ b/distributed.html
@@ -5,7 +5,7 @@
         <title>Version Control Systems: Distributed VCS breakthrough</title>
     </head>
     <body>
-        <section>
+        <nav>
             <h3>Navigation</h3>
             <ul>
                 <li><a href="index.html">Overview</a></li>
@@ -13,27 +13,29 @@
                 <li><a>Distributed VCS breakthrough</a></li>
                 <li><a href="trends.html">Trends</a></li>
             </ul>
-        </section>
-        <p>
-            Distributed version control compared to centralized are more resilliant to failures
-            and data loss. They also allow for more collaboration flexibilty.
-        </p>
-        <p>
-            While centralized systems are easier and simpler to use and implement,
-            it's also the single point of failure.<br>
-            If the server goes offline, no one can work anymore; 
-            furthemore if the server suffers data loss, you better hope you had manually made backups.
-        </p>
-        <p>
-            Meanwhile in distributed systems, every developer has local copy of the source code.<br>
-            This allows for developers to work even if they or the server are offline and
-            also provides redundancy in the event of data loss.
-        </p>
-        <p>
-            Distributed VCS also allow for more flexibilty with different collaboration models.<br>
-            Developers can set to fetch from one server but push to a different server (or even to another developer);
-            and in fact it doesn't need to be one server, VCSs like GIT allow you to set multiple "remotes".<br>
-            However that kind of configuration is rather rare.
-        </p>
+        </nav>
+		<main>
+			<p>
+				Distributed version control compared to centralized are more resilliant to failures
+				and data loss. They also allow for more collaboration flexibilty.
+			</p>
+			<p>
+				While centralized systems are easier and simpler to use and implement,
+				it's also the single point of failure.<br>
+				If the server goes offline, no one can work anymore; 
+				furthemore if the server suffers data loss, you better hope you had manually made backups.
+			</p>
+			<p>
+				Meanwhile in distributed systems, every developer has local copy of the source code.<br>
+				This allows for developers to work even if they or the server are offline and
+				also provides redundancy in the event of data loss.
+			</p>
+			<p>
+				Distributed VCS also allow for more flexibilty with different collaboration models.<br>
+				Developers can set to fetch from one server but push to a different server (or even to another developer);
+				and in fact it doesn't need to be one server, VCSs like GIT allow you to set multiple "remotes".<br>
+				However that kind of configuration is rather rare.
+			</p>
+		</main>
     </body>
 </html>
