--- a/history.html
+++ b/history.html
@@ -5,7 +5,7 @@
         <title>Version Control Systems: History</title>
     </head>
     <body>
-        <section>
+        <nav>
             <h3>Navigation</h3>
             <ul>
                 <li><a href="index.html">Overview</a></li>
@@ -13,6 +13,8 @@
                 <li><a href="distributed.html">Distributed VCS breakthrough</a></li>
                 <li><a href="trends.html">Trends</a></li>
             </ul>
+        </nav>
+		<main>
             <h2>Here's a small timeline of major VCSs:</h2>
             <p>
                 1972: Source Code Control System<br>
@@ -41,6 +43,6 @@
                 Created by the legendary Linus Torvalds, it introduced distributed VCS
                 and quickly became the number one Version Control System used by almost everyone till this day.
             </p>
-        </section>
+		</main>
     </body>
 </html>
