--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Version Control Systems: Overview</title>
     </head>
     <body>
-        <section>
+        <nav>
             <h3>Navigation</h3>
             <ul>
                 <li><a>Overview</a></li>
@@ -13,10 +13,12 @@
                 <li><a href="distributed.html">Distributed VCS breakthrough</a></li>
                 <li><a href="trends.html">Trends</a></li>
             </ul>
+        </nav>
+		<main>
             <p>
                 This site contains information about Version Control Systems.<br>
                 Use the navigation section above to browse pages.
             </p>
-        </section>
+		</main>
     </body>
 </html>
