--- a/trends.html
+++ b/trends.html
@@ -5,7 +5,7 @@
         <title>Version Control Systems: Trends</title>
     </head>
     <body>
-        <section>
+        <nav>
             <h3>Navigation</h3>
             <ul>
                 <li><a href="index.html">Overview</a></li>
@@ -13,32 +13,34 @@
                 <li><a href="distributed.html">Distributed VCS breakthrough</a></li>
                 <li><a>Trends</a></li>
             </ul>
-        </section>
-        <p>
-            In modern days there are various integrations and practices that have
-            emerged to extend VCSs.
-        </p>
-        <p>
-            GitOps - An approach that takes DevOps to Version Control, with the main idea being
-            to put infrastructure configuration and deployments as code in the repository.<br>
-            This grants all the benefits from VCS to the infrastructure itself and allows for
-            automatic configuration via "workflows".
-        </p>
-        <p>
-            CI/CD - These two systems allows for fast and easy issue detection and deloyment.<br>
-            Continous Integration allows for fast issue detection by running automated builds
-            and tests every time a change is made.<br>
-            Continous Deployment (usually right after succesfull CI check) prepares and deploys
-            the latest changes, which results in speedy deployment.
-        </p>
-        <p>
-            Cloud based platforms - By taking VCS to the cloud it allows for more features
-            to be available to developers at ease.<br>
-            Most VCS platforms include a host of tools for collaboration, such as Pull Requests
-            which allow to propose and review changes before they hit the main code.<br>
-            They also come with issue management to track issues and improvements in an easy and flexible way.<br>
-            Cloud based platforms also can bring the network effect to open-source projects,
-            by allowing anyone to easily fork and contribute to projects, while also building their own portfolio.
-        </p>
+        </nav>
+		<main>
+			<p>
+				In modern days there are various integrations and practices that have
+				emerged to extend VCSs.
+			</p>
+			<p>
+				GitOps - An approach that takes DevOps to Version Control, with the main idea being
+				to put infrastructure configuration and deployments as code in the repository.<br>
+				This grants all the benefits from VCS to the infrastructure itself and allows for
+				automatic configuration via "workflows".
+			</p>
+			<p>
+				CI/CD - These two systems allows for fast and easy issue detection and deloyment.<br>
+				Continous Integration allows for fast issue detection by running automated builds
+				and tests every time a change is made.<br>
+				Continous Deployment (usually right after succesfull CI check) prepares and deploys
+				the latest changes, which results in speedy deployment.
+			</p>
+			<p>
+				Cloud based platforms - By taking VCS to the cloud it allows for more features
+				to be available to developers at ease.<br>
+				Most VCS platforms include a host of tools for collaboration, such as Pull Requests
+				which allow to propose and review changes before they hit the main code.<br>
+				They also come with issue management to track issues and improvements in an easy and flexible way.<br>
+				Cloud based platforms also can bring the network effect to open-source projects,
+				by allowing anyone to easily fork and contribute to projects, while also building their own portfolio.
+			</p>
+		</main>
     </body>
 </html>
